--- a/Style.css
+++ b/Style.css
@@ -1,8 +1,11 @@
-﻿body {
+﻿body 
+{
     background-color: crimson;
+    
 }
 
-.card {
+.card 
+{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
@@ -12,24 +15,27 @@
     margin: 10px;
     background-color: white;
 }
-
-    .card:hover {
+.card:hover 
+{
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
         transform: scale(.75,1.5);
         transition: all 0.5s ease-in-out;
-    }
+}
 
-#container {
+#container 
+{
     padding: 2px 16px;
 }
 
-h1 {
+h1 
+{
     text-align: center;
-    font-size: 250%;
+    font-size: 350%;
     color: floralwhite;
 }
 
-img {
+img 
+{
     border-radius: 5px 5px 0 0;
     width: 100%;
 }
