--- a/Style.css
+++ b/Style.css
@@ -4,6 +4,24 @@
     
 }
 
+h1
+{
+    text-align: center;
+    font-size: 350%;
+    color: floralwhite;
+}
+
+li a 
+{
+    background-color: crimson;
+    color: floralwhite;
+    text-transform: uppercase;
+    text-decoration: none;
+    margin: 5px;
+    padding: 1em 1.5em;
+    display: block;
+    border-radius: 20px;
+}
 .card 
 {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -27,12 +45,7 @@
     padding: 2px 16px;
 }
 
-h1 
-{
-    text-align: center;
-    font-size: 350%;
-    color: floralwhite;
-}
+
 
 img 
 {
