--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -8,3 +8,11 @@ div
     font-size: 16px;
     color: white;
 }
+
+nav
+{
+    background-color: white;
+    float: left;
+    height: 100vh;
+    padding: 15px;
+}
