--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -16,3 +16,15 @@ nav
     height: 100vh;
     padding: 15px;
 }
+
+li a 
+{
+    background-color: white;
+    color: crimson;
+    text-transform: uppercase;
+    text-decoration: none;
+    margin: 5px;
+    padding: 1em 1.5em;
+    display: block;
+    border-radius: 20px;
+}
