--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -11,7 +11,7 @@ div
 
 nav
 {
-    background-color: white;
+    background-color: crimson;
     float: left;
     height: 100vh;
     padding: 15px;
