--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,8 @@ h1
 {
     text-align: center;
     font-size: 350%;
-    color: floralwhite;
+    color: crimson;
+    font-family: Arial;
 }
 
 #links
