--- a/projectsstyle.css
+++ b/projectsstyle.css
@@ -14,6 +14,13 @@ nav {
     padding: 15px;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+
 li a {
     background-color: white;
     color: crimson;
