--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -17,6 +17,13 @@ nav
     padding: 15px;
 }
 
+ul 
+{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 li a 
 {
     background-color: white;
