--- a/projectsstyle.css
+++ b/projectsstyle.css
@@ -20,7 +20,6 @@ ul {
     padding: 0;
 }
 
-
 li a {
     background-color: white;
     color: crimson;
@@ -30,4 +29,25 @@ li a {
     padding: 1em 1.5em;
     display: block;
     border-radius: 20px;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    display: inline-block;
+    max-width: 300px;
+    padding: 4px 4px;
+    margin: 10px;
+    background-color: white;
+}
+
+    .card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+        transform: scale(.75,1.5);
+        transition: all 0.5s ease-in-out;
+    }
+
+#container {
+    padding: 2px 16px;
 }
