--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -7,6 +7,13 @@ div {
     color: black;
 }
 
+h1 {
+    text-align: center;
+    font-size: 350%;
+    color: crimson;
+    font-family: Arial,
+}
+
 nav {
     background-color: crimson;
     float: left;
