--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -43,7 +43,7 @@ li a {
     transition: 0.3s;
     border-radius: 5px;
     display: inline-block;
-    max-width: 300px;
+    max-width: 65%;
     padding: 4px 4px;
     margin: 10px;
     background-color: white;
