--- a/skillsstyle.css
+++ b/skillsstyle.css
@@ -40,6 +40,7 @@ li a {
     padding: 4px 4px;
     margin: 10px;
     background-color: white;
+    object-fit: cover;
 }
 
     .card:hover {
@@ -50,5 +51,5 @@ li a {
 
 #container {
     padding: 2px 16px;
-    height: 350px;
+    
 }
