--- a/skillsstyle.css
+++ b/skillsstyle.css
@@ -36,10 +36,11 @@ li a {
     transition: 0.3s;
     border-radius: 5px;
     display: inline-block;
-    max-width: 300px;
+    max-width: 200px;
+    max-height: 200px;
     padding: 4px 4px;
     margin: 10px;
-    background-color: white;
+    background-color: white;    
     object-fit: cover;
 }
 
